# RollDiceServer

./: CMakeLists.txt  main.cpp
include/: accessToken.h  basic_class.h  coc7thManager.h  dicedb.h  roleManager.h  userManager.h
src/: accessToken.cpp  basicClass.cpp  dicedb.cpp  userManager.cpp
